Project insurance updated Signed-off-by: unknown <deepsarkar0@gmail.com>

--- a/Insurance Project/Project Insurance.ipynb
+++ b/Insurance Project/Project Insurance.ipynb
@@ -3122,6 +3122,110 @@
     "# <u> Conclusion\n",
     "* Here I have used 5 of the machine learning classifiers — RandomForest, XGBoosting, LGBMClassifier, Cat Boosting and Gaussian Naive Bayes out of which CatBoosting Classifier proved to provide the best accuracy score. We can see the same in the ROC_AUC curve where the area under the same is maximum, that is 97.20%."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9342781c-b06b-47c9-a30f-5825f3ac6a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fc21b9e1-0eca-4bd3-a397-45e5f8f8b8eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "656237b3-7af7-4438-98f6-55e04de36143",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(a/100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6e2c12bb-68e1-416a-ad25-d24af8108a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(a/1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3f2ef74e-90a6-4a53-aa23-3ef9178fbc64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "rev=0\n",
+    "while a>0:\n",
+    "    r=a%10\n",
+    "    rev=rev*10+r\n",
+    "    a=a//10\n",
+    "print(rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0379373-6fad-4b88-8ffa-35ff8cff06a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
